--- a/src/components/recipes/RecipeCard.css
+++ b/src/components/recipes/RecipeCard.css
@@ -1,25 +1,8 @@
-.recipe {
-    margin: 0.33em 0;
-    width: 18em;
-}
-
 .recipe--single {
     width: 40em;
-    margin: 7em auto;
+    
 }
 
-.recipe:hover {
-    animation: jiggle 0.2s;
-    transition: .4s all ease;
-    z-index: 11;
-    box-shadow: 5px 15px 20px rgba(72, 62, 23, 0.4)
-}
-
-.recipe__header {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
 
 ul, li {
     list-style-type: none;
@@ -29,3 +12,19 @@ img {
     max-width: 10em;
     height: auto;
 }
+
+.card {
+    /* Add shadows to create the "card" effect */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    
+    
+  }
+  
+  /* On mouse-over, add a deeper shadow */
+  .card:hover {
+    animation: jiggle 0.2s;
+    transition: .4s all ease;
+    z-index: 11;
+    box-shadow: 5px 15px 20px rgba(72, 62, 23, 0.4)
+  }
