working name and description edit, working on editing ingredients

--- a/src/components/liquorCabinet/IngredientCard.css
+++ b/src/components/liquorCabinet/IngredientCard.css
@@ -20,9 +20,9 @@ img {
   }
   
   /* On mouse-over, add a deeper shadow */
-  .card:hover {
+  /* .card:hover {
     animation: jiggle 0.2s;
     transition: .4s all ease;
     z-index: 11;
     box-shadow: 5px 15px 20px rgba(72, 62, 23, 0.4)
-  }
+  } */
