--- a/src/components/drinks.css
+++ b/src/components/drinks.css
@@ -1,5 +1,5 @@
 /* Import the google web fonts you want to use */
-@import url('https://fonts.googleapis.com/css?family=Comfortaa|Patua+One');
+@import url('https://fonts.googleapis.com/css2?family=Fredoka&display=swap');
 
 /*Typography
 --------------------------------------------------------------*/
@@ -9,13 +9,13 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: 'Comfortaa', Arial, sans-serif;
+	font-family: 'Fredoka', Arial, sans-serif;
 	font-size: 14px;
 	line-height: 1.5;
 }
 
 h1,h2,h3,h4,h5,h6 {
-  font-family: 'Patua One', serif;
+  font-family: 'Fredoka', serif;
   letter-spacing: 2px;
 }
 
