--- a/src/components/liquorCabinet/IngredientCard.css
+++ b/src/components/liquorCabinet/IngredientCard.css
@@ -2,10 +2,7 @@
     width: 40em;  
 }
 
-ul, li {
-    list-style-type: none;
-    margin-left: none;
-}
+
 img {
     max-width: 10em;
     height: auto;
@@ -15,9 +12,20 @@ img {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color: #F0F0EE;
     
     
   }
+
+.removeIngredientId {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: #F0F0EE;
+}
+
+  .remove--image {
+    max-width: 1em;
+}
   
   /* On mouse-over, add a deeper shadow */
   /* .card:hover {
@@ -26,3 +34,35 @@ img {
     z-index: 11;
     box-shadow: 5px 15px 20px rgba(72, 62, 23, 0.4)
   } */
+  button.add--button, button.remove--button {
+    background-color: transparent;
+    border: transparent;
+    display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+
+button.add--button :hover, button.remove--button :hover, button.add--button :focus, button.remove--button :focus, button.add--button :active, button.remove--button:active {   
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+
+.inventoryList {
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%
+    
+}
+
+div.card-body{
+  /* display: flex; */
+  flex-wrap: nowrap;
+  /* flex-direction: row; */
+  justify-content: space-between;
+  width: 100%;
+}
