--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,10 +1,17 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap;
-    justify-content: left;
+    justify-content: space-evenly;
+    background-color: #467AB1;
+    
 }
 
 .navbar__item {
     flex-basis: 20%;
     list-style-type: none;
 }
+
+.navbar a {
+    color: white;
+}
+
