--- a/src/components/recipes/RecipeCard.css
+++ b/src/components/recipes/RecipeCard.css
@@ -3,37 +3,66 @@
     
 }
 
-ul, li {
-    list-style-type: none;
-    margin-left: none;
-}
 img {
     max-width: 10em;
     height: auto;
 }
 
+.cardlist{
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    width: 100%;
+
+    
+}
+
+
 .card {
     /* Add shadows to create the "card" effect */
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
+    background-color: #F0F0EE;
+    padding: 2em 2em;
+    margin-bottom: 1em;
+    margin-right: 1em;
+    width:32%
     
-    
-  }
-  
-  /* On mouse-over, add a deeper shadow */
-.card :hover {
-    animation: jiggle 0.2s;
-    transition: .4s all ease;
-    z-index: 11;
-    box-shadow: 5px 15px 20px rgba(72, 62, 23, 0.4)
   }
 
-.add--image {
+  h3.card-title {
+      margin:0em 0em 1em 0em
+  }
+
+
+.add--image, .remove--image {
     max-width: 1em;
 }
+button.add--button, button.remove--button {
+    background-color: transparent;
+    border: transparent;
+    display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+
+button.add--button :hover, button.remove--button :hover, button.add--button :focus, button.remove--button :focus, button.add--button :active, button.remove--button:active {   
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
+}
+
 
 textarea {
     width:98%;
     min-height: 6em;
     max-height: auto;
+}
+
+.cardTitle {
+    padding-top: 1em;
 }
