--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,6 +1,6 @@
 .navbar {
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: nowrap !important;
     justify-content: space-evenly;
     background-color: #467AB1;
     padding-right:1em;
