--- a/src/components/drinks.css
+++ b/src/components/drinks.css
@@ -9,8 +9,7 @@ input,
 select,
 textarea {
 	color: #404040;
-	font-family: 'Fredoka', Arial, sans-serif;
-	font-size: 14px;
+	font-family: 'Fredoka', Arial, sans-serif!important;
 	line-height: 1.5;
 }
 
