reviews showing, working on edit reviews. working on limiting revies showed

--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@ ul {
   flex-wrap: wrap !important;
   width: 100%;
 }
-li {
+li.card {
   list-style-type: none;
   margin-left: none;
   width:30%
