--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,11 +1,17 @@
 .navbar {
     display: flex;
     flex-wrap: nowrap !important;
-    justify-content: space-between;
+    justify-content: space-between !important;
     background-color: #467AB1;
     padding-right:1em;
     margin-top: 1em;
+    width: 100%;
     
+}
+@media only screen and (max-width: 600px) {
+    .navbar {
+        flex-wrap: wrap !important;
+    }
 }
 
 .navbar__item {
@@ -31,6 +37,12 @@
 .navbar a:active {
     text-decoration: underline;
   }
+
+a.navbar__link {
+    border-bottom: 1em;
+
+
+}
 
 
 
